// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel component should render 1`] = `
<DocumentFragment>
  <nav
    class="panel"
  />
</DocumentFragment>
`;

exports[`Panel component should render 2`] = `
<DocumentFragment>
  <div
    class="panel-block"
  />
</DocumentFragment>
`;

exports[`Panel component should render 3`] = `
<DocumentFragment>
  <div
    class="panel-heading"
  />
</DocumentFragment>
`;

exports[`Panel component should render 4`] = `
<DocumentFragment>
  <span
    class="panel-icon"
  />
</DocumentFragment>
`;

exports[`Panel component should render 5`] = `
<DocumentFragment>
  <div
    class="panel-tabs"
  />
</DocumentFragment>
`;

exports[`Panel component should render 6`] = `
<DocumentFragment>
  <a />
</DocumentFragment>
`;

exports[`Panel component should render with all 1`] = `
<DocumentFragment>
  <nav
    class="panel"
  >
    <div
      class="panel-heading"
    >
      repositories
    </div>
    <div
      class="panel-block"
    >
      <div>
        Control
      </div>
    </div>
    <div
      class="panel-tabs panel-tabs"
    >
      <a
        class="is-active"
      >
        all
      </a>
      <a>
        public
      </a>
      <a>
        private
      </a>
      <a>
        sources
      </a>
      <a>
        forks
      </a>
    </div>
    <a
      class="panel-block is-active"
    >
      <span
        class="panel-icon"
      >
        <i
          class="fa fa-bars"
        />
      </span>
      bulma
    </a>
    <label
      class="panel-block panel-block"
    >
      <input
        type="checkbox"
      />
      remember me
    </label>
    <div
      class="panel-block"
    >
      <button
        type="button"
      >
        reset all filters
      </button>
    </div>
  </nav>
</DocumentFragment>
`;
